--- a/index.html
+++ b/index.html
@@ -43,40 +43,40 @@
 
 
     <!-- Page Content -->
-    <section class="text-left py-32">
-      <div class="flex flex-wrap justify-center items-center gap-8">
+    <section class="text-left py-24 sm:mx-4">
+      <div class="grid grid-cols-1 grid-rows-1 md:grid-rows-3 md:grid-cols-3 lg:grid-cols-3 lg:grid-rows-3 gap-8 mx-6">
         <a href="">
-          <div class="bg-white text-black hover:bg-black hover:text-white px-28 py-16 rounded-xl text-xl">
+          <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">dns</span>
             <p>Server Management</p>
           </div>
         </a>
         <a href="">
-          <div class="bg-white text-black hover:bg-black hover:text-white px-28 py-16 rounded-xl text-xl">
+          <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">security</span>
             <p>Security Policy Hub</p>
           </div>
         </a>
         <a href="">
-          <div class="bg-white text-black hover:bg-black hover:text-white px-28 py-16 rounded-xl text-xl">
+          <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">app_registration</span>
             <p>Asset Registry</p>
           </div>
         </a>
         <a href="">
-          <div class="bg-white text-black hover:bg-black hover:text-white px-28 py-16 rounded-xl text-xl">
+          <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">router</span>
             <p>Network Status Report</p>
           </div>
         </a>
         <a href="">
-          <div class="bg-white text-black hover:bg-black hover:text-white px-28 py-16 rounded-xl text-xl">
+          <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">fluid_balance</span>
             <p>Ninani Info wiki</p>
           </div>
         </a>
         <a href="">
-          <div class="bg-white text-black hover:bg-black hover:text-white px-28 py-16 rounded-xl text-xl">
+          <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">browse_activity</span>
             <p>Service Desk</p>
           </div>
