--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Page Content -->
     <section class="text-left py-24 sm:mx-4">
       <div class="grid grid-cols-1 grid-rows-1 md:grid-rows-3 md:grid-cols-3 lg:grid-cols-3 lg:grid-rows-3 gap-8 mx-6">
-        <a href="">
+        <a href="https://secure1.inmotionhosting.com/index/login">
           <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">dns</span>
             <p>Server Management</p>
@@ -57,13 +57,13 @@
             <p>Security Policy Hub</p>
           </div>
         </a>
-        <a href="">
+        <a href="http://assetregistry.ninanigroup.com/">
           <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">app_registration</span>
             <p>Asset Registry</p>
           </div>
         </a>
-        <a href="">
+        <a href="https://uptimerobot.com/">
           <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">router</span>
             <p>Network Status Report</p>
@@ -75,7 +75,7 @@
             <p>Ninani Info wiki</p>
           </div>
         </a>
-        <a href="">
+        <a href="https://servicedesk.ninanigroup.com">
           <div class="bg-white text-black hover:bg-black hover:text-white px-20 py-16 rounded-xl duration-700 hover:shadow-xl">
             <span class="material-symbols-outlined">browse_activity</span>
             <p>Service Desk</p>
